--- a/index.html
+++ b/index.html
@@ -29,20 +29,32 @@
     </div>
     <div class="games"> <!--fgo na-->
         <div class="games-wrapper">
-            <img src="fgobg1.png" alt="fate/grand order NA">
+            <a href="https://rayshift.io/na/230745000">
+                 <img src="fgobg1.png" alt="fate/grand order NA"></a>
             <span class="games-text">F/GO NA: 230,745,000</span>
         </div>
     </div>
     <div class="games"> <!--fgo jp-->
         <div class="games-wrapper">
-            <img src="fgobg2.png" alt="fate/grand order JP">
+            <a href="https://rayshift.io/jp/703108732">
+                <img src="fgobg2.png" alt="fate/grand order JP"></a>
             <span class="games-text">F/GO JP: 703,108,732</span>
+            <span class="games-text2"></span>
         </div>
     </div>
     <div class="games"> <!--hsr-->
         <div class="games-wrapper">
             <img src="hsrbg.png" alt="honkai star rail">
             <span class="games-text">Honkai Star Rail: 801931880</span>
+        </div>
+    </div>
+    <hr>
+    <div class="links-header">
+        <span>Links</span>
+    </div>
+    <div class="links">
+        <div class="links-wrapper">
+            <img src="" alt="osu">
         </div>
     </div>
 </body>
