Mobile device resizing, reformat layout

--- a/index.html
+++ b/index.html
@@ -6,6 +6,27 @@
     <link rel="stylesheet" href="website.css">
     <title>Skyline's Stuff</title>
 </head>
+<header>
+    <div class="header-left">
+        <button class="hamburger">
+            <svg 
+                xmlns="http://www.w3.org/2000/svg"
+                width="20px"
+                height="20px"
+                viewbox="0 0 24 24"
+                fill="none"
+                stroke="white"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                >
+                <line x1="4" x2="20" y1="12" y2="12"/>
+                <line x1="4" x2="20" y1="6" y2="6"/>
+                <line x1="4" x2="20" y1="18" y2="18"/>
+            </svg>
+        </button>
+    </div>
+</header>
 <body>
     <div class="pfp"> <!--pfp-->
         <div class="pfp-img-wrapper">
@@ -18,39 +39,41 @@
         </div>
     </div>
 
-    <div class="gamesheader">
-        <span>List of UIDs:</span><br>
-    </div>
-    <div class="games"> <!--umamusume-->
-        <div class="games-wrapper">
-            <img src="umabg.png" alt="umamusume">
-            <span class="games-text">Umamusume: 962698687058</span>
+    <div class="gamesuid">
+        <div class="gamesheader">
+            <span>List of UIDs:</span><br>
         </div>
-    </div>
-    <div class="games"> <!--fgo na-->
-        <div class="games-wrapper">
-            <a href="https://rayshift.io/na/230745000">
-                 <img src="fgobg1.png" alt="fate/grand order NA"></a>
+        <div class="games"> <!--umamusume-->
+            <div class="games-wrapper">
+                <img src="umabg.png" alt="umamusume">
+                <span class="games-text">Umamusume: 962698687058</span>
+            </div>
+        </div>
+        <div class="games"> <!--fgo na-->
+            <div class="games-wrapper">
+                <a href="https://rayshift.io/na/230745000">
+                    <img src="fgobg1.png" alt="fate/grand order NA"></a>
             <span class="games-text">F/GO NA: 230,745,000</span>
+            </div>
         </div>
-    </div>
-    <div class="games"> <!--fgo jp-->
-        <div class="games-wrapper">
-            <a href="https://rayshift.io/jp/703108732">
-                <img src="fgobg2.png" alt="fate/grand order JP"></a>
-            <span class="games-text">F/GO JP: 703,108,732</span>
-            <span class="games-text2"></span>
+        <div class="games"> <!--fgo jp-->
+            <div class="games-wrapper">
+                <a href="https://rayshift.io/jp/703108732">
+                    <img src="fgobg2.png" alt="fate/grand order JP"></a>
+                <span class="games-text">F/GO JP: 703,108,732</span>
+                <span class="games-text2"></span>
+            </div>
         </div>
-    </div>
-    <div class="games"> <!--hsr-->
-        <div class="games-wrapper">
-            <img src="hsrbg.png" alt="honkai star rail">
-            <span class="games-text">Honkai Star Rail: 801931880</span>
+        <div class="games"> <!--hsr-->
+            <div class="games-wrapper">
+                <img src="hsrbg.png" alt="honkai star rail">
+                <span class="games-text">Honkai Star Rail: 801931880</span>
+            </div>
         </div>
     </div>
     <hr>
     <div class="links-header">
-        <span>Links</span>
+        <span>Links (WIP)</span>
     </div>
     <div class="links">
         <div class="links-wrapper">
