Font change,  general cleanup

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             </svg>
         </button>
     </div>
+    <div class="header-text">
+        <span><- not working</span>
+    </div>
 </header>
 <body>
     <div class="pfp"> <!--pfp-->
@@ -38,11 +41,12 @@
             <span class="pfpdesc">I play so many gacha games</span>
         </div>
     </div>
+    <hr>
+    <div class="gamesheader">
+        <span>List of UIDs:</span><br>
+    </div>
 
     <div class="gamesuid">
-        <div class="gamesheader">
-            <span>List of UIDs:</span><br>
-        </div>
         <div class="games"> <!--umamusume-->
             <div class="games-wrapper">
                 <img src="umabg.png" alt="umamusume">
@@ -70,6 +74,12 @@
                 <span class="games-text">Honkai Star Rail: 801931880</span>
             </div>
         </div>
+        <div class="games"> <!--other-->
+            <div class="games-wrapper">
+                <img src="blackimg.png" alt="honkai star rail">
+                <span class="games-text">WIP</span>
+            </div>
+        </div>
     </div>
     <hr>
     <div class="links-header">
@@ -77,7 +87,7 @@
     </div>
     <div class="links">
         <div class="links-wrapper">
-            <img src="" alt="osu">
+
         </div>
     </div>
 </body>
